<resources>
    <string name="app_name">Homework10</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="user_name">User name</string>
    <string name="login">login</string>
    <string name="default_value">0</string>
    <string name="repositories">Repositories</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
</resources>
