<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/user_photo_url"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="@string/user_name"/>

    <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="@string/login"/>


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:stretchColumns="1">
        <TableRow>

            <TextView
                    android:id="@+id/user_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textAlignment="center"
                    android:textSize="30dp"/>
            <TextView
                    android:id="@+id/user_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textAlignment="center"
                    android:textSize="30dp"/>
            <TextView
                    android:id="@+id/user_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textAlignment="center"
                    android:textSize="30dp"/>

        </TableRow>

        <TableRow>

            <TextView
                    android:text="@string/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"/>
            <TextView
                    android:text="@string/repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAllCaps="true"/>


            <TextView
                    android:text="@string/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"/>
        </TableRow>
    </TableLayout>



</LinearLayout>